# BMI-calculator-haskell

./: .gitignore  BMICalculator.hs  BMIRecordsRetrieval.hs  CODE_OF_CONDUCT.md  ChangeLog.md  Main.hs  MenuExtras.hs  README.md  Validation.hs  bmiapp.db  finalproject-fpp-cabal.cabal  finalproject-fpp.cabal  package.yaml  stack.yaml  test.db
DB/: Datatypes.hs
Utils/: MenuExtras.hs  Misc.hs  Validation.hs
app/: BMICalculator.hs  Main.hs
app/Utils/: IOValidation.hs  MenuExtras.hs  Validation.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.2/: finalproject-fpp-cabal-0.1.0.0-inplace.conf  package.cache
dist-newstyle/tmp/src-10729/comonad-5.0.6/: comonad.cabal
