cabal-version: 2.4
name: finalproject-fpp-cabal
version: 0.1.0.0
license-file: LICENSE
author: Josh
maintainer: ahimaz.joshua@gmail.com
extra-source-files: CHANGELOG.md
executable finalproject-fpp-cabal
  main-is: Main.hs
  other-modules: 
    Utils.MenuExtras
    , Utils.Validation
    , BMICalculator


  build-depends: 
    base ^>=4.14.1.0
    , groundhog-sqlite
    , time
  default-language: Haskell2010